--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"svelte": "^3.29.0",
 		"svelte-preprocess": "^4.6.9",
 		"tailwindcss": "^2.0.3",
+		"tailwindcss-font-inter": "^2.0.2",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0",
 		"vite": "^2.1.0"
