--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"prettier-plugin-svelte": "^2.2.0",
 		"simple-git-hooks": "^2.2.0",
 		"svelte": "^3.29.0",
+		"svelte-check": "^1.3.0",
 		"svelte-preprocess": "^4.6.9",
 		"tailwindcss": "^2.0.3",
 		"tailwindcss-font-inter": "^2.0.2",
