--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"lint-staged": "^10.5.4",
 		"postcss": "^8.2.7",
 		"postcss-load-config": "^3.0.1",
+		"postcss-nested": "^5.0.5",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"simple-git-hooks": "^2.2.0",
