--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "1.0.0-next.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.0",
-		"@sveltejs/kit": "next",
-		"@tailwindcss/jit": "^0.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.19.0",
-		"@typescript-eslint/parser": "^4.19.0",
+		"@sveltejs/adapter-node": "^1.0.0-next.12",
+		"@sveltejs/adapter-static": "^1.0.0-next.4",
+		"@sveltejs/kit": "^1.0.0-next.71",
+		"@tailwindcss/jit": "^0.1.18",
+		"@typescript-eslint/eslint-plugin": "^4.21.0",
+		"@typescript-eslint/parser": "^4.21.0",
 		"autoprefixer": "^10.2.5",
-		"cssnano": "^4.1.10",
-		"eslint": "^7.22.0",
+		"cssnano": "^4.1.11",
+		"eslint": "^7.23.0",
 		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-svelte3": "^3.1.0",
+		"eslint-plugin-svelte3": "^3.1.2",
 		"lint-staged": "^10.5.4",
-		"postcss": "^8.2.7",
+		"postcss": "^8.2.9",
 		"postcss-load-config": "^3.0.1",
 		"postcss-nested": "^5.0.5",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
-		"simple-git-hooks": "^2.2.0",
-		"svelte": "^3.29.0",
-		"svelte-check": "^1.3.0",
-		"svelte-preprocess": "^4.6.9",
-		"tailwindcss": "^2.0.3",
-		"tailwindcss-font-inter": "^2.0.2",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
-		"vite": "^2.1.0"
+		"simple-git-hooks": "^2.3.1",
+		"svelte": "^3.37.0",
+		"svelte-check": "^1.4.0",
+		"svelte-preprocess": "^4.7.0",
+		"tailwindcss": "^2.1.1",
+		"tailwindcss-font-inter": "^2.0.3",
+		"tslib": "^2.2.0",
+		"typescript": "^4.2.3",
+		"vite": "^2.1.5"
 	},
 	"type": "module",
 	"engines": {
