feat: Add mdsvex for markdown

--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.2",
 		"lint-staged": "^10.5.4",
+		"mdsvex": "^0.8.9",
 		"postcss": "^8.2.9",
 		"postcss-load-config": "^3.0.1",
 		"postcss-nested": "^5.0.5",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
+		"rehype-autolink-headings": "^5.0.1",
+		"rehype-slug": "^4.0.1",
+		"remark-abbr": "^1.4.1",
+		"remark-github": "^10.0.1",
 		"simple-git-hooks": "^2.3.1",
 		"svelte": "^3.37.0",
 		"svelte-check": "^1.4.0",
@@ -42,7 +47,8 @@
 		"node": ">= 12.17.0"
 	},
 	"lint-staged": {
-		"*.{js,ts,svelte,css,md}": [
+		"*.{js,svelte,css,md}": "prettier --write",
+		"*.{js,ts,svelte,css}": [
 			"eslint --cache --fix",
 			"prettier --write",
 			"npm run lint",
